[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "temporalvector"
version = "0.0.1"
authors = [
  { name="Chris McKay", email="crmckay55@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"